--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,5 +10,5 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Run a one-line script
-      run: Invoke-Pest
+      run: Invoke-Pester
       shell: pwsh
